# tessera-digital-twin

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.documentation/: PROGRESS.md  VISUALIZER_FILE_CHECKLIST.md
Tokio Backend/: backend.rs
assets/data/: layout.txt  layout0_basic_small.txt  layout1.txt  layout1_basic_medium.txt  layout2.txt  layout2_basic_large.txt  layout3_cinematic_ring.txt  layout4_cinematic_crossroads.txt  layout5_cinematic_runway.txt  layout6_test_bottleneck.txt  layout7_test_openfield.txt  layout8_test_lane_swap.txt  layout9_massive_factory.txt  warehouse_layout.csv
assets/layouts/: l1_basic_small.layout  l2_basic_medium.txt  l3_basic_large.layout  l4_cinematic_crossroads.layout  l5_cinematic_runway.layout  l6_test_bottleneck.layout  l7_test_openfield.layout  l8_masive_centralized.layout  l9_massive_stresstest.layout
assets/models/: Entities.blend  Walls.blend  Walls.blend1  Walls.glb  floor.glb  robot.glb  shelf.glb  wall-T.glb  wall-cap.glb  wall-corner.glb  wall-pillar.glb  wall-windowed.glb  wall.glb
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/control_plane/: Cargo.toml
crates/control_plane/src/: main.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: commands.rs  main.rs  server.rs  state.rs  task_manager.rs
crates/coordinator/src/pathfinding/: astar.rs  dispatcher.rs  mod.rs  whca.rs
crates/fleet_server/: Cargo.toml
crates/fleet_server/src/: commands.rs  main.rs  pathfinding.rs  server.rs  state.rs
crates/mission_control/: Cargo.toml
crates/mission_control/src/: cli.rs  commands.rs  main.rs  server.rs
crates/mission_control/src/allocator/: closest.rs  mod.rs
crates/mission_control/src/queue/: fifo.rs  mod.rs
crates/mock_firmware/: Cargo.toml
crates/mock_firmware/src/: commands.rs  driver.rs  main.rs  robot.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs  main.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: cli.rs  main.rs  processes.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: chaos.rs  commands.rs  config.rs  grid_map.rs  layout.rs  lib.rs  logs.rs  publish.rs  robot.rs  tasks.rs  topics.rs  util.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: cli.rs  commands.rs  main.rs  server.rs
crates/scheduler/src/allocator/: closest.rs  dispatcher.rs  mod.rs
crates/scheduler/src/queue/: dispatcher.rs  fifo.rs  mod.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: components.rs  main.rs  resources.rs
crates/simulation/src/systems/: camera.rs  dashboard.rs  index_robots.rs  mod.rs  movement.rs  populate_scene.rs  spawn_robot.rs  sync_robots.rs  zenoh_receiver.rs
crates/swarm_driver/: Cargo.toml
crates/swarm_driver/src/: commands.rs  driver.rs  main.rs  robot.rs
crates/visualizer/: Cargo.toml
crates/visualizer/examples/: wall_debug.rs
crates/visualizer/src/: components.rs  main.rs  resources.rs  tests.rs
crates/visualizer/src/systems/: camera.rs  command_bridge.rs  commands.rs  congestion_overlays.rs  dashboard.rs  draw_paths.rs  interpolate_robots.rs  luminance_hierarchy.rs  material_diagnostics.rs  mod.rs  models.rs  outline.rs  path_receiver.rs  populate_scene.rs  queue_receiver.rs  robot_cargo_visibility.rs  robot_labels.rs  sync_robot_cargo.rs  sync_robots.rs  zenoh_receiver.rs
crates/visualizer/src/systems/receivers/: mod.rs  path_telemetry.rs  queue_state.rs  robot_updates.rs  task_list.rs  whca_metrics.rs
crates/visualizer/src/ui/: gui.rs  mod.rs  panels.rs
crates/visualizer/src/ui/panels/: mod.rs
crates/visualizer/src/ui/tabs/: analytics.rs  control_bar.rs  details.rs  inspector.rs  logs.rs  mod.rs  network.rs  objects.rs  robot_inspector.rs  shelf_inspector.rs  task_inspector.rs  tasks.rs
crates/visualizer/src/ui/views/: bottom.rs  control_bar.rs  mod.rs  network.rs  objects.rs  robot_inspector.rs  shelf_inspector.rs  task_inspector.rs  tasks.rs
crates/visualizer/src/ui/widgets/: common.rs  minimap.rs  mod.rs
src/: components.rs  main.rs  protocol.rs  resources.rs
src/systems/: dashboard.rs  logistics.rs  mod.rs  setup_scene.rs  spawn_robot.rs
