[workspace]
members = [
    "crates/protocol",
    "crates/orchestrator",
    "crates/visualizer",
    "crates/coordinator",
    "crates/mock_firmware",
    "crates/scheduler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
zenoh = "1.7.2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1