[package]
name = "mock_firmware"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zenoh.workspace = true
rand.workspace = true
protocol = { path = "../protocol" }

[[bin]]
name = "mock_firmware"
path = "src/main.rs"
