[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
notifier = { path = "../notifier" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zenoh.workspace = true
