[package]
name = "visualizer"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { version = "0.17.3" }
rand = "0.8"
bevy_egui = "0.38.1"
bevy-inspector-egui = "0.35"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zenoh.workspace = true
protocol = { path = "../protocol" }

[[bin]]
name = "visualizer"
path = "src/main.rs"
